[package]
name = "hexxer"
authors = ["René Möhring <rene_moehring@gmx.de>"]
version = "0.2.0"
edition = "2021"
description = "A xxd like hexdump cli tool"
license = "MIT"
keywords = ["xxd", "hexdump"]
repository = "https://github.com/tyrdal/hexxer"

[dependencies]
clap = { version = "4.5.*"}
owo-colors = { version = "4.2.*", features = ["supports-colors"] }

[[bin]]
name = "hexx"
path = "src/main.rs"

# TODO:
# help, roadmap and readme markdown files
# reverse hexdump
# config for colors -> see also hexyl --print-color-table, maybe alternating color shades between lines
# binary and octal dumps
# show offset in decimal
# support for uppercase hex letters
# export arrays for c, rust maybe more
# autoskip -> a * replace nul lines, maybe also identical lines?
# little endian
# toggle address and text part _
