[package]
name = "hexxer"
authors = ["tyrdal <tyrdal@gmx.de>"]
version = "0.3.1"
edition = "2024"
description = "A hexdump cli tool"
license = "MIT"
keywords = ["xxd", "hexdump"]
repository = "https://github.com/tyrdal/hexxer"

[dependencies]
clap = { version = "4.5.*", features = ["derive"] }
owo-colors = { version = "4.2.*", features = ["supports-colors"] }

[[bin]]
name = "hexx"
path = "src/main.rs"

# TODO:
# have an outfile or write to stdout if missing
# help, roadmap and readme markdown files
# reverse hexdump
# config for colors -> see also hexyl --print-color-table, maybe alternating color shades between lines
# binary and octal dumps
# support for uppercase hex letters
# export arrays for c, rust maybe more
# autoskip -> a * replace nul lines, maybe also identical lines?
# little endian
# toggle address and text part _
